--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="menu-btn"><i class="fas fa-bars"></i></div>
     <div class="nav-bar">
         <div class="logo">Snapshot</div>
-        <ul class="nav-links show">
+        <ul class="nav-links">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Gallery</a></li>
